--- a/index.html
+++ b/index.html
@@ -13,5 +13,31 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-	
-	
+<body>
+  <nav>
+    <div class="wrapper">
+      <img class="logo" src"assets/images/logo.png" />
+      <div class="menu">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#botdiscord">Botdiscord</a></li>
+                    <li><a href="#webtemplate">Webtemplate</a></li>
+                    <li><a href="#partners">Partners</a></li>
+                    <li><a href="#community">Community</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="wrapper">
+        <!-- untuk home -->
+        <section id="home">
+            <img src="https://img.freepik.com/free-vector/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
+            <div class="kolom">
+                <p class="deskripsi">Belajar Programming #dirumahaja</p>
+                <h2>Tetap Sehat, Tetap Semangat</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, nobis.</p>
+                <p><a href="" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
+            </div>
+        </section>
+</body>
+</html>
