--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <img src="https://img.freepik.com/free-vector/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
+            <img src="assets/images/logo.png" />
             <div class="kolom">
                 <p class="deskripsi">Belajar Programming #dirumahaja</p>
                 <h2>Tetap Sehat, Tetap Semangat</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, nobis.</p>
                 <p><a href="" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
             </div>
         </section>
