--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>XC-Project 69</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -33,7 +33,7 @@
         <section id="home">
             <img src="assets/images/logo.png" />
             <div class="kolom">
-                <p class="deskripsi">Belajar Programming #dirumahaja</p>
+                <p class="deskripsi">XC-Project Coming Soon...</p>
                 <h2>Tetap Sehat, Tetap Semangat</h2>
                 <p><a href="" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
             </div>
