--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>XC-Project 69</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
