--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
 <body>
   <nav>
     <div class="wrapper">
-      <div class="logo"><a href=''>XC-Project</a></div>
-      <div class="menu">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#botdiscord">Botdiscord</a></li>
-                    <li><a href="#webtemplate">Webtemplate</a></li>
-                    <li><a href="#partners">Partners</a></li>
-                    <li><a href="#community">Community</a></li>
-                </ul>
-            </div>
+      <div class="logo">
+        <a href="#">
+          <img class="logopicture" src="assets/images/logo.png" />
+        <div class="menu">
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#courses">Courses</a></li>
+            <li><a href="#tutors">Tutors</a></li>
+            <li><a href="#partners">Partners</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="" class="tbl-biru">Sign Up</a></li>
+          </ul>
         </div>
+      </div>
     </nav>
 </body>
 </html>
