--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <div class="logo">
         <a href="#">
-          <img class="logopicture" src="assets/images/logo.png" />
+          <img class="logo" src="assets/images/logo.png" />
         <div class="menu">
           <ul>
             <li><a href="#home">Home</a></li>
