--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>XC-Project 69</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -22,11 +22,8 @@
         <div class="menu">
           <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#courses">Courses</a></li>
-            <li><a href="#tutors">Tutors</a></li>
-            <li><a href="#partners">Partners</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="" class="tbl-biru">Sign Up</a></li>
+            <li><a href="#media">Media</a></li>
+            <li><a href="#plugin">Plugin</a></li>
           </ul>
         </div>
 </body>
