--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 <body>
   <nav>
     <div class="wrapper">
-      <div class="logo">
-        <a href="#">
-          <img class="logo" src="assets/images/logo.png" />
+      <div class="logo"><a href=''>XC-Project</a><div>
         <div class="menu">
           <ul>
             <li><a href="#home">Home</a></li>
