--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XC-Project 69</title>
@@ -21,5 +20,13 @@
             <li><a href="#plugin">Plugin</a></li>
           </ul>
         </div>
+      </nav>
+      <div class="wrapper">
+        <section id="home">
+          <img src="assets/images/home.png"/>
+          <div class="kolom">
+            <p class="deskripsi">XC-Project Makes Custom Minecraft Plugin And Plugin Project...</p>
+            <p> Better Plugin by Me Coming soon...</p>
+      </div>
 </body>
 </html>
