--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
       <div class="wrapper">
         <section id="home">
-          <img src="assets/images/home.png"/>
+          <img class="homeimg" src="assets/images/home.png"/>
           <div class="kolom">
             <p class="deskripsi">XC-Project Makes Custom Minecraft Plugin And Plugin Project...</p>
             <p> Better Plugin by Me Coming soon...</p>
